--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "laravel/framework": "^8.0",
         "laravel/legacy-factories": "^1.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0"
+        "laravel/ui": "^3.0",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
